--- a/css/style.css
+++ b/css/style.css
@@ -4895,7 +4895,7 @@ footer.dark p {
 
 /* Button send */
 
-* {
+button.send {
   -webkit-transition: all 0.15s;
   -moz-transition: all 0.15s;
   -o-transition: all 0.15s;
