--- a/projects/easysubs/css/style.css
+++ b/projects/easysubs/css/style.css
@@ -4,17 +4,19 @@ body {
 	background-color: #1e2123;
 }
 .content {
-	width: 500px;
-  height: 210px;
-	position:absolute;
-  left:0;
-  right:0;
-  top:0;
-  bottom:0;
-	margin:auto;
-	max-width:100%;
-	max-height:100%;
-	overflow:auto;
+	position: absolute;
+	left: 0;
+	right: 0;
+	top: 0;
+	bottom: 0;
+	margin: auto;
+	max-width: 100%;
+	max-height: 100%;
+	overflow: auto;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	flex-direction: column;
 }
 h1 {
 	font-family: 'Open Sans', sans-serif;
@@ -23,6 +25,9 @@ h1 {
 	font-size: 60px;
 	text-align: center;
 	margin: 0;
+}
+.screen {
+	margin-bottom: 20px;
 }
 p {
 	color: #eee;
