--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 /*
   Style.css file
-  Comet Template
+  Comet
   By CodePark | http://codepark.co
 */
 /****************
@@ -108,7 +108,10 @@ h6.upper,
 }
 a {
   color: #EF2D56;
+  -webkit-transition: all .3s ease;
+  transition: all .3s ease;
 }
+
 a:hover {
   color: #7a0921;
   text-decoration: none;
@@ -5281,6 +5284,10 @@ button.send.clicked svg path {
   color: #e6e7e9;
 }
 
+.more-projects {
+  -webkit-transition: opacity .3s ease;
+  transition: opacity .3s ease;
+}
 
 .more-projects:hover {
   cursor: pointer;
@@ -5289,4 +5296,22 @@ button.send.clicked svg path {
 
 .more-projects h4 a:hover {
   color: #EF2D56;
+}
+
+/* Talks */
+
+#talks h4 {
+  text-align: left;
+}
+
+#talks .timeline:before {
+  top: 0;
+  bottom: 20px;
+}
+
+#talks .date {
+  display: flex;
+  justify-content: flex-end;
+  margin-top: -2px;
+  margin-right: 20px;
 }
